fixed remove checkbox, employee bug when add to the project, bug in disable drag after project closed

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1329,3 +1329,9 @@
 .modal-body {
     overflow-y: auto;
 }
+
+.prevent-select {
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
