--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -161,7 +161,7 @@
                                     <h4 class="card-title text-primary fw-bold fs-2">Project Details</h4>
                                 </div>
                             </div>
-                            <div class="card-body bg-white " style="overflow-y: auto; max-height: 66vh;">
+                            <div class="card-body bg-white " style="overflow-y: auto; max-height: 66vh; min-height: 66vh;">
                                 
                                 <div class="d-flex gap-3 mb-2">
                                     <div class="d-flex gap-1 align-items-center">
