--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -775,7 +775,7 @@
                     container.appendChild(projectElement);
                 }
             
-                return container.outerHTML;
+                return container.innerHTML;
             }
 
             $('#pagination-container').pagination({
@@ -794,7 +794,7 @@
                 
                     $('#sort-container').html(html);
                 },
-                pageSize: 9, // Number of items per page
+                pageSize: 8, // Number of items per page
             });
 
             let departmentProjectId;
@@ -1516,6 +1516,8 @@
                     const currentTime = monthFilter.value;
                     const yearValue = parseInt(yearFilterSelect.value);
 
+                    console.log(allData)
+
                     const matchingProjects = pList.filter((a) => {
                         const projectDate = new Date(a.startDate);
                         const projectMonth = projectDate.getMonth();
@@ -2226,7 +2228,7 @@
                                             var html = template(data);
                                             $('#sort-container').html(html);
                                         },
-                                        pageSize: 9,
+                                        pageSize: 8,
                                     });
                                     //const newProject = createProjectList(data);
                                     //motherContainer.insertBefore(
@@ -2739,14 +2741,14 @@
                         </div>
                         <div
                             class="d-flex pt-2 flex-column gap-2"
-                            style="background-color: #e5e5f7; min-height: 530px;"
+                            style="background-color: #e5e5f7; "
                             id="sort-container"
                         >
                             <!-- TODO :: SHOW ALL PROJECTS LIST START FROM HERE -->
                             <div class="loader"></div>
                             <!-- TODO :: SHOW ALL PROJECTS LIST END HERE -->
                         </div>
-                        <div id="pagination-container"></div>
+                        
 
                         <div style="width: 100%; height:50vh" class="d-flex justify-content-center align-items-center d-none" id="no-result">
                             <div class="d-flex justify-content-center align-items-center flex-column">
@@ -2754,6 +2756,7 @@
                                 <h1 class="text-white">No Project Found!</h1>
                             </div>
                         </div>
+                        <div id="pagination-container" style="position: absolute; bottom:10px; left:10px;"></div>
                     </div>
                 </div>
                 <!-- project end -->
