--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -3113,7 +3113,9 @@
                                 class="tab-pane fade show active profile-overview"
                                 id="project-overview"
                             >
+
                                 <div class="row row-cols-1 gap-2 p-3">
+                                    <div><h4 class="title">Overview Detail</h4></div>
                                     <div class="row row-cols-2" id="detail-view">
                                         <div class="row row-cols-1 gap-2">
                                             <div class="">
