fixed some bug in issue.html

--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -657,12 +657,12 @@
                                     <h3 >Solution</h3>
                                 </div>
                             </div>
-                            <div class="col mb-3 mt-4">
+                            <div class="col mb-3 mt-4 text-wrap">
                                 <div>
                                     <i class="fa-solid fa-screwdriver-wrench text-success"></i>
                                     <span>Corrective Action</span>
                                 </div>
-                                <p class="mt-3" id="correctiveDetails"></p>
+                                <div class="mt-3 " style="word-wrap: break-word;  " id="correctiveDetails"></div>
 
                             </div>
                             <hr>
@@ -671,7 +671,7 @@
                                     <i class="fa-solid fa-shield text-success"></i>
                                     <span>Preventive Action</span>
                                 </div>
-                                <p class="mt-3" id="preventiveDetails"></p>
+                                <p class="mt-3" style="word-wrap: break-word;  " id="preventiveDetails"></p>
 
                             </div>
                         </div>
