--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -1304,7 +1304,7 @@
                                                         >Objective</label
                                                     >
                                                     <div class="col-md-8 col-lg-9">
-                                                        <div id="edit-project-objective"></div>
+                                                        <div id="edit-project-objective" style="width: 100%;"></div>
                                                     </div>
                                                 </div>
 
