--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -122,7 +122,7 @@
             defer
             src="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.4/js/bootstrap5-toggle.min.js"
         ></script>
-        <script src="/js/projects.js" defer type="module"></script>
+        <script type="module" src="/js/projects.js" defer></script>
     </head>
 
     <body>
@@ -246,7 +246,7 @@
 
                         <!-- add department modal end -->
                         <!-- sortting button -->
-                        <i class="bi bi-sort-alpha-down sort-btn text-dark"></i>
+                        
                         </div>
                         <!-- Modal -->
                     </div>
@@ -300,7 +300,7 @@
                                 <h1 class="text-white">No Project Found!</h1>
                             </div>
                         </div>
-                        <div id="pagination-container" style="position: absolute; bottom:10px; left:10px;"></div>
+                        <div id="pagination-container"  style="position: absolute; bottom:10px; left:42%;" ></div>
                     </div>
                 </div>
                 <!-- project end -->
@@ -455,6 +455,32 @@
                                         ></textarea>
                                     </div>
 
+                                    <!--                                architectures add-->
+                                    <div class="col-lg-6">
+                                        <label
+                                            for="architectures"
+                                            class="col-sm-12 col-form-label"
+                                            name="architectures"
+                                            >Architecture<span style="color: red"> *</span></label
+                                        >
+                                        <input
+                                            type="text"
+                                            class="form-control"
+                                            id="architectures"
+                                            name="architectures"
+                                            placeholder="add some value"
+                                            required
+                                        />
+
+                                        <div class="error-container d-none">
+                                            <p
+                                                class="text-danger fs-6 error-message"
+                                                style="margin-top: 0"
+                                            >
+                                                please select aleast one architecture
+                                            </p>
+                                        </div>
+                                    </div>
 
                                     <!--                                systemoutline add-->
                                     <div class="col-lg-6">
@@ -466,56 +492,18 @@
                                             <span style="color: red"> *</span>
                                         </label>
                                         <div id="systemOutlines"></div>
-
-                                        <div class="error-container d-none">
-                                            <p class="text-danger fs-6 error-message" style="margin-top: 0">
-                                                System Outlines is required
-                                            </p>
-                                        </div>
                                     </div>
 
                                     <div class="col-lg-6">
-                                        <label for="employee-list" class="col-sm-12 col-form-label" name="employee-list">
-                                            Choose employee
+                                        <label
+                                            for="employee-list"
+                                            class="col-sm-12 col-form-label"
+                                            name="systemOutlines"
+                                            >Choose employee
                                             <span style="color: red"> *</span>
                                         </label>
                                         <div id="employee-list"></div>
-
-                                        <div class="error-container d-none">
-                                            <p class="text-danger fs-6 error-message d-none" style="margin-top: 0">
-                                                Employee is required
-                                            </p>
-                                        </div>
                                     </div>
-
-
-                                    <!--                                architectures add-->
-                                    <div class="col-lg-6">
-                                        <label
-                                                for="architectures"
-                                                class="col-sm-12 col-form-label"
-                                                name="architectures"
-                                        >Architecture<span style="color: red"> *</span></label
-                                        >
-                                        <input
-                                                type="text"
-                                                class="form-control"
-                                                id="architectures"
-                                                name="architectures"
-                                                placeholder="add some value"
-                                                required
-                                        />
-
-                                        <div class="error-container d-none">
-                                            <p
-                                                    class="text-danger fs-6 error-message"
-                                                    style="margin-top: 0"
-                                            >
-                                                please select aleast one architecture
-                                            </p>
-                                        </div>
-                                    </div>
-
 
                                     <!--                                deliverable add-->
                                     <div class="col-lg-6">
@@ -533,14 +521,6 @@
                                             placeholder="add value"
                                             required
                                         />
-                                        <div class="error-container d-none">
-                                            <p
-                                                    class="text-danger fs-6 error-message"
-                                                    style="margin-top: 0"
-                                            >
-                                                please select aleast one deliverable
-                                            </p>
-                                        </div>
                                     </div>
 
                                     <div class="col-lg-12" style="margin-bottom: 80px">
@@ -747,33 +727,27 @@
                                 class="tab-pane fade show active profile-overview"
                                 id="project-overview"
                             >
-
                                 <div class="row row-cols-1 gap-2 p-3">
-                                    <div><h4 class="title">Overview Detail</h4></div>
                                     <div class="row row-cols-2" id="detail-view">
                                         <div class="row row-cols-1 gap-2">
                                             <div class="">
-                                                <div class="col fs-6 fw-bold" style="color: #369;">
-                                                    <i class="fa-solid fa-building-user"></i>: Department Name</div>
+                                                <div class="col fs-6 fw-bold">department</div>
                                                 <div class="col" id="project-department-name">
                                                     dance club
                                                 </div>
                                             </div>
                                             <div class="">
-                                                <div class="col fs-6 fw-bold" style="color: #369">
-                                                    <i class="fa-solid fa-file"></i>: Project Name</div>
+                                                <div class="col fs-6 fw-bold">Project name</div>
                                                 <div class="col" id="project-name">find nemo</div>
                                             </div>
                                             <div class="">
-                                                <div class="col fs-6 fw-bold" style="color: #369">
-                                                    <i class="fa-solid fa-business-time"></i>: Duration</div>
+                                                <div class="col fs-6 fw-bold">duration</div>
                                                 <div class="col" id="project-duration">
                                                     3 Months
                                                 </div>
                                             </div>
-                                             <div class="optional-view" style="color: #369">
-                                                <div class="col fs-6 fw-bold">
-                                                    <i class="fa-solid fa-registered"></i>: Internal review</div>
+                                             <div class="optional-view">
+                                                <div class="col fs-6 fw-bold">internal review</div>
                                                 <div class="col" id="project-current-internal-review-count">
                                                     Basic design
                                                 </div>
@@ -781,29 +755,25 @@
                                         </div>
                                         <div class="row row-cols-1 gap-2">
                                             <div class="">
-                                                <div class="col fs-6 fw-bold" style="color: #369">
-                                                    <i class="fa-solid fa-calendar-days"></i>: Start date</div>
+                                                <div class="col fs-6 fw-bold">start date</div>
                                                 <div class="col" id="project-start-date">
                                                     25 september 2022
                                                 </div>
                                             </div>
                                             <div class="">
-                                                <div class="col fs-6 fw-bold" style="color: #369">
-                                                    <i class="fa-solid fa-calendar-days"></i>: End date</div>
+                                                <div class="col fs-6 fw-bold">end date</div>
                                                 <div class="col" id="project-end-date">
                                                     25 december 2022
                                                 </div>
                                             </div>
                                             <div class="" >
-                                                <div class="col fs-6 fw-bold" style="color: #369">
-                                                    <i class="fa-solid fa-forward"></i>: Current phase</div>
+                                                <div class="col fs-6 fw-bold">current phase</div>
                                                 <div class="col" id="project-current-phase">
                                                     Basic design
                                                 </div>
                                             </div>
                                             <div class="optional-view">
-                                                <div class="col fs-6 fw-bold" style="color: #369;">
-                                                    <i class="fa-solid fa-registered"></i>: External review</div>
+                                                <div class="col fs-6 fw-bold">external review</div>
                                                 <div class="col" id="project-current-external-review-count">
                                                     Basic design
                                                 </div>
@@ -813,9 +783,8 @@
                                     </div>
                                     <div>
                                         <div>
-                                            <p class="card-title m-0 fs-6 fw-bold" style="color: #369;">
-                                                <i class="fa-solid fa-clipboard"></i>: Background</p>
-                                            <p class="" id="project-background"></p>
+                                            <p class="card-title m-0 fs-6 fw-bold">background</p>
+                                            <p class="" id="project-background" style="word-break: break-all;"></p>
                                         </div>
                                     </div>
 
@@ -1319,7 +1288,7 @@
                                                         >Objective</label
                                                     >
                                                     <div class="col-md-8 col-lg-9">
-                                                        <div id="edit-project-objective" style="width: 100%;"></div>
+                                                        <div id="edit-project-objective"></div>
                                                     </div>
                                                 </div>
 
@@ -1343,7 +1312,7 @@
                             >
                                 <div class="container-fluid">
                                 <div class="row">
-                                    <div ><h4 class="d-flex justify-content-center mt-2 title" >Client Information</h4></div>
+                                    <div><h4 class="d-flex justify-content-center mt-2">Client Information</h4></div>
 
                                     <div class="row row-cols-1">
                                         <div
