--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -122,6 +122,12 @@
             defer
             src="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.4/js/bootstrap5-toggle.min.js"
         ></script>
+        
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/themes/redmond/jquery-ui.min.css" integrity="sha512-pL3uvb0iajriFzWcsjvmztg0ViN8MGpl4ajmiCb+xC5vnLUES2mkdp+7YAUjlcK/T+htiZH9HNkxAO+P3TbUmA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/themes/redmond/theme.min.css" integrity="sha512-0bcqtDVki4GAD6rxlpngwNROUwKg5Nf+ARCueSCa1gk1DB5V9QxsChj2G+dGNOQzN8tpbJidotfAhPZnQjsJ/w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"
+            integrity="sha512-57oZ/vW8ANMjR/KQ6Be9v/+/h6bq9/l3f0Oc7vn6qMqyhvPd1cvKBRWWpzu0QoneImqr2SkmO4MSqU+RpHom3Q=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
         <script type="module" src="/js/projects.js" defer></script>
     </head>
 
@@ -398,7 +404,7 @@
                                             >Start Date<span style="color: red"> *</span></label
                                         >
                                         <input
-                                            type="date"
+                                            type="text"
                                             class="form-control border-task-description"
                                             id="start_date"
                                             name="start_date"
